# battle-system

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  frames.dot  frames.dot.gv  frames_2025-05-16_11.14.34.gv  frames_2025-05-16_11.43.25.gv  frames_2025-05-20_17.47.35.gv  frames_2025-06-03_16.46.26.gv  frames_2025-06-03_16.57.10.gv
.github/workflows/: ci.yml
docs/: stage1_report.md  use_cases.md
install/: _local_setup_util_ps1.py  _local_setup_util_sh.py  local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.sh
install/battle_interfaces/share/battle_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/battle_interfaces/share/battle_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  battle_interfacesConfig-version.cmake  battle_interfacesConfig.cmake  rosidl_cmake-extras.cmake  (+11 more)
install/command_center/lib/command_center/: commander_node
install/command_center/share/command_center/: package.dsv  package.ps1  package.sh  package.xml
install/fire_platform/lib/fire_platform/: fire_node  test_tf_target
install/fire_platform/share/fire_platform/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fire_platform_3/lib/fire_platform_3/: fire_node_3  test_tf_target
install/fire_platform_3/share/fire_platform_3/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fire_platform_3/share/fire_platform_3/launch/: platform_tf.launch.py
install/fire_platform_description/share/fire_platform_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fire_tracker/lib/fire_tracker/: tracker_node  tracker_node_fp3
install/fire_tracker/share/fire_tracker/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/operator_interface/share/operator_interface/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/scan_platform/lib/scan_platform/: scanner_node
install/scan_platform/share/scan_platform/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/scanner_platform/lib/scanner_platform/: scan_node
install/scanner_platform/share/scanner_platform/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build  latest_test
src/battle_interfaces/: CMakeLists.txt
src/battle_interfaces/srv/: HealthCheck.srv
src/battle_interfaces/test/lint/: test_copyright.py  test_pep257.py
src/central_hub/: MANIFEST.in  README.md  package.xml  setup.py
src/central_hub/central_hub/: commander_node.py
src/central_hub/launch/: full_pipeline.launch.py
src/combat_platform/: MANIFEST.in  README.md  package.xml  setup.cfg  setup.py
src/combat_platform/combat_platform/: tracker_node.py
src/combat_platform/combat_platform/config/: combat_positions.yaml
src/combat_platform/combat_platform/launch/: multi_combat_tf.launch.py  platform_tf.launch.py
src/combat_platform/combat_platform/urdf/: combat.urdf.xacro
src/command_center/: package.xml  setup.py
src/command_center/command_center/: commander_node.py
src/command_center/test/integration/: test_commander_node_launch.py
src/command_center/test/unit/: test_node_alive.py
src/common_msgs/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/common_msgs/msg/: PlatformStatus.msg  Target.msg
src/common_msgs/srv/: HealthCheck.srv  PointAndFire.srv
src/dual_platforms/: package.xml  setup.cfg  setup.py
src/dual_platforms/dual_platforms/: fake_odom_publisher.py
src/dual_platforms/dual_platforms/config/: ekf_fp1.yaml  ekf_fp2.yaml
src/dual_platforms/dual_platforms/launch/: dual_launch.py
src/dual_platforms/dual_platforms/test_odom/: test_odometry_publisher.py
src/dual_platforms/resource/: dual_platforms
src/fire_platform/: package.xml  setup.cfg  setup.py
src/fire_platform/fire_platform/: aiming_node.py  fire_node.py
src/fire_platform/launch/: fire_platform_launch.py  platform_tf.launch.py
src/fire_platform/test/integration/: test_fire_node_launch.py
src/fire_platform/test/lint/: test_flake8.py
src/fire_platform/test/unit/: test_fire_node.py
src/fire_platform/urdf/: dummy.urdf.xacro  fire_platform.urdf.xacro
src/fire_platform_3/: package.xml  setup.cfg  setup.py
src/fire_platform_3/fire_platform_3/: fire_node_3.py
src/fire_platform_3/launch/: fire_platform3.launch.py  fire_platform_launch.py  platform_tf.launch.py
src/fire_platform_3/test/integration/: test_fire_node_3_launch.py
src/fire_platform_3/test/unit/: test_fire_node_3.py
src/fire_platform_3/urdf/: dummy.urdf.xacro  fire_platform.urdf.xacro
src/fire_platform_description/: setup.py
src/fire_platform_description/launch/: fire_platform_state.launch.py  fire_platform_tf.launch.py
src/fire_tracker/: package.xml  setup.cfg  setup.py
src/fire_tracker/fire_tracker/: tracker_node.py  tracker_node_fp3.py
src/fire_tracker/test/integration/: test_tracker_node_launch.py
src/fire_tracker/test/lint/: test_flake8.py
src/fire_tracker/test/unit/: test_tracker_node.py  test_tracker_node_fp3.py
src/operator_interface/: README.md  package.xml  setup.cfg  setup.py
src/positioning/: package.xml  setup.py
src/scan_platform/: package.xml  setup.py
src/scan_platform/scan_platform/: scan_node.py
src/scan_platform/test/integration/: test_scan_node_launch.py
src/scan_platform/test/unit/: test_scan_node.py
src/scan_platform_deprecated/: setup.cfg
src/scan_platform_deprecated/test/unit/: test_scan_node.py
src/scanner_platform/: MANIFEST.in  README.md  package.xml  setup.cfg  setup.py
src/scanner_platform/scanner_platform/: scan_node.py
src/scanner_platform/scanner_platform/launch/: platform_tf.launch.py  scanner_launch.py
src/scanner_platform/scanner_platform/urdf/: scanner.urdf.xacro
(+92 files in other folders)
