cmake_minimum_required(VERSION 3.8)
project(battle_interfaces)

################################################################################
# 1. Параметри компілятора (не обов’язково, але корисно)
################################################################################
if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

################################################################################
# 2. Залежності
################################################################################
find_package(ament_cmake                REQUIRED)
find_package(rosidl_default_generators  REQUIRED)
find_package(std_msgs                   REQUIRED)
find_package(builtin_interfaces         REQUIRED)

################################################################################
# 3. Генерація повідомлень / сервісів
################################################################################
rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/Target.msg"
  "msg/TargetArray.msg"
  "msg/AimVector.msg"
  "srv/Pointing.srv"
  DEPENDENCIES builtin_interfaces std_msgs    # інтерфейси, які ми використовуємо всередині .msg/.srv
)

################################################################################
# 4. Експорт залежностей (щоб інші пакети могли імпортувати ці типи)
################################################################################
ament_export_dependencies(rosidl_default_runtime)

################################################################################
# 5. Увімкнути тести lint‑ів (за бажанням)
################################################################################
if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  ament_lint_auto_find_test_dependencies()
endif()

################################################################################
# 6. Фіналізація
################################################################################
ament_package()
