<?xml version="1.0"?>
<package format="3">
  <name>combat_platform</name>
  <version>0.0.0</version>
  <description>Combat platform with tf and URDF</description>
  <maintainer email="willi@battle.system">willi energ</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
