<?xml version="1.0"?>
<package format="3">
  <name>combat_platform</name>
  <version>0.0.0</version>
  <description>Combat platform with tf and URDF</description>
  <maintainer email="willi@battle.system">willi energ</maintainer>
  <license>MIT</license>

  <!-- Інструмент для збірки -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Залежності під час збірки -->
  <build_depend>rclpy</build_depend>
  <build_depend>launch</build_depend>
  <build_depend>launch_ros</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>battle_interfaces</build_depend>

  <!-- Залежності під час виконання -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>battle_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
