<?xml version="1.0"?>
<package format="3">
  <name>command_center</name>
  <version>0.0.1</version>
  <description>Command center node</description>
  <maintainer email="willi@todo.todo">willi</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Залежності під час збірки -->
  <build_depend>rclpy</build_depend>
  <build_depend>battle_interfaces</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Залежності під час виконання -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>battle_interfaces</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
