<?xml version="1.0"?>
<package format="3">
  <name>fire_platform</name>
  <version>0.0.0</version>
  <description>Fire module node</description>
  <maintainer email="willi@todo.todo">willi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

    <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <depend>battle_interfaces</depend>          <!-- ← додати -->


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
