<?xml version="1.0"?>
<package format="3">
  <name>fire_platform</name>
  <version>0.0.0</version>
  <description>Fire module node</description>
  <maintainer email="willi@todo.todo">willi</maintainer>
  <license>TODO: License declaration</license>

  <!-- Інструменти зборки -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Залежності під час збірки -->
  <build_depend>rclpy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>battle_interfaces</build_depend>
  <build_depend>fire_platform_description</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <!-- Залежності під час виконання -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>battle_interfaces</exec_depend>
  <exec_depend>fire_platform_description</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <!-- Тестові залежності -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
