<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>operator_interface</name>
  <version>0.0.0</version>
  <description>Інтерфейс оператора для керування бойовими платформами</description>
  <maintainer email="energ00022@gmail.com">willi</maintainer>
  <license>MIT</license>

  <!-- Збірка -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Основні залежності -->
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <build_depend>battle_interfaces</build_depend>
  <exec_depend>battle_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
