<?xml version="1.0"?>
<package format="3">
  <name>scan_platform</name>
  <version>0.0.1</version>
  <description>Scan platform package</description>
  <maintainer email="willi@todo.todo">willi</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>battle_interfaces</depend>
  <depend>builtin_interfaces</depend>


  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
