<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scanner_platform</name>
  <version>0.0.0</version>
  <description>Сканувальна платформа з tf та LiDAR</description>
  <maintainer email="energ00022@gmail.com">willi</maintainer>
  <license>MIT</license>

  <!-- Збірка -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Основні залежності -->
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Якщо використовує battle_interfaces (наприклад Target.msg) -->
