<?xml version="1.0"?>

<package format="3">
  <name>scanner_platform</name>
  <version>0.0.1</version>
  <description>Scanner platform package for battle ROS 2 system</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- Buildtool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Рунтайм залежності -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>std_msgs</depend>
  <depend>numpy</depend>
  <depend>pcl_py</depend>
  <depend>battle_interfaces</depend>
  <depend>geometry_msgs</depend>

  <!-- Залежності для лінтингу та тестів -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
